--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,17 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+## Teaching and Mentorship
+
+**Undergraduate Teaching at**
+[University of Sri Jayewardenepura](https://science.sjp.ac.lk/phy/jajr/)
+
+- **EES 209 (1.0)** — Computer Integrated Control Systems  
+- **ASP 483 (2.0)** — Advanced Programmable Logic Controllers  
+- **EES 311 (1.0)** — Mobile Application Development  
+- **EES 202 (1.0)** — Data Communication Techniques  
+- **EES 205 (1.0)** — Object Oriented Programming for Embedded Systems  
+- **PHY 311 (1.0)** — Introduction to Computer Hardware  
+- **EES 212 (1.0)** — Embedded Systems Mini Challenge  
+- **PHY 101 (1.0)** — Fundamentals of Electronics  
+- **EES 305 (1.0)** — IoT and Robotics Lab
