--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% if site.author.googlescholar %}
   <div class="wordwrap">
-    Find me on <a href="{{ site.author.googlescholar }}">Google Scholar</a> for the most up-to-date list of publications.
+    You can also find this on my <a href="{{ site.author.googlescholar }}">Google Scholar</a>.
   </div>
 {% endif %}
 
